Actualización de reporte.php

--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
 </head>
 <body>
     <div class="overlay">
-        <h1 class="text-center">Sistema de Gestión de Inventarios</h1>
+        <h1 class="text-center">Sistema de Gestión de Inventarios Floristeria</h1>
         <p class="mt-3">Administra tus datos de inventario de manera rápida y eficiente.</p>
         <div class="mt-4">
             <div class="d-flex justify-content-center">
                 <div class="card m-2" style="width: 18rem;">
                     <div class="card-body text-center">
                         <h5 class="card-title">Gestión de Productos</h5>
-                        <p class="card-text">Accede para agregar, editar o eliminar productos de tu inventario.</p>
+                        <p class="card-text">Accede para agregar y editar tu productos</p>
                         <a href="formulario.php" class="btn btn-primary">Ir a Gestión</a>
                     </div>
                 </div>
                 <div class="card m-2" style="width: 18rem;">
                     <div class="card-body text-center">
                         <h5 class="card-title">Reportes</h5>
-                        <p class="card-text">Consulta los reportes detallados de tu inventario.</p>
+                        <p class="card-text">Reportes exactos de tu inventario de Plantas</p>
                         <a href="reporte.php" class="btn btn-secondary">Ver Reportes</a>
                     </div>
                 </div>
